# t_phase_no_grad

./: CMakeLists.txt  README.md  checkVec.py  generateFiles.py  generateParseFiles.py  main.cpp  runV1CartesianQuadratic.cpp  runV1CartesianQuadraticParseBin.cpp  runV1DistRelative.cpp  runV1DistRelativeParseBin.cpp  runV1InsideLQuadratic.cpp  runV1InsideLQuadraticParseBin.cpp  runV1LJ2AtomPBC.cpp  runV1LJ2AtomParseBinPBC.cpp  runV1QuadraticPBC.cpp  runV1QuadraticParseBinPBC.cpp  runV1RingQuadratic.cpp  runV1RingQuadraticParseBin.cpp  sym.py
version1/LJPotPBC/: json2plt.py  parseBinPBC.cpp  parseBinPBC.hpp  pltG.py  readCSV.py  version1LJPotPBC2Atom.cpp  version1LJPotPBC2Atom.hpp
version1/cartesian/: json2plt.py  parseBinPBC.cpp  parseBinPBC.hpp  readCSV.py  runJson2Plt.py  thermalExpansion.py  version1CartesianQuadratic.cpp  version1CartesianQuadratic.hpp
version1/distRelative/: parseBinPBC.cpp  parseBinPBC.hpp  runJson2Plt.py  thermalExpansion.py  version1DistRelative.cpp  version1DistRelative.hpp
version1/insideLQuadratic/: json2plt.py  parseBinPBC.cpp  parseBinPBC.hpp  readCSV.py  version1InsideLQuadratic.cpp  version1InsideLQuadratic.hpp
version1/quadraticPBC/: json2plt.py  matchVar.py  parseBinPBC.cpp  parseBinPBC.hpp  pltG.py  readCSV.py  version1QuadraticPBC2Atom.cpp  version1QuadraticPBC2Atom.hpp
version1/ringQuadratic/: json2plt.py  parseBinPBC.cpp  parseBinPBC.hpp  readCSV.py  version1RingQuadratic.cpp  version1RingQuadratic.hpp
version1Input/1d/LJPotPBC/: V1LJ2Atom1d.csv
version1Input/1d/cartesian/: cartesianQuadratic.csv
version1Input/1d/insideLQuadratic/: insideLQuadratic.csv
version1Input/1d/quadratic/: quadraticParams.csv
version1Input/1d/quartic2PBC/: V1LJ2Atom1d.csv
version1Input/1d/ringQuadratic/: ringQuadratic.csv
